# dev-toolkit

./: README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: add-logging.md  logging-agent.md
commands/: install-github-app-safely.md  modernize-dependencies.md  setup-release-pipeline.md  sync-description.md
skills/chunkhound/: SKILL.md
skills/cloud-native-checklist/: SKILL.md
skills/container-signing/: SKILL.md
skills/dependency-vetting/: SKILL.md
skills/gibram/: README.md  SKILL.md  docker-compose.yml  index-docs.py  mcp-server.py  server-config.yaml
skills/install-github-app-safely/: SKILL.md
skills/levelup/: SKILL.md
skills/levelup/agents/: audit.md  biome.md  mise.md  python.md
skills/levelup/references/: audit.md  biome.md  mise.md  python.md
skills/levelup/templates/: biome.json  mise.toml  pyproject.toml
skills/logging/: SKILL.md
skills/modernize-dependencies/: SKILL.md
skills/pretty-diagrams/: SKILL.md
skills/setup-release-pipeline/: SKILL.md
skills/skill-scout/: SKILL.md
skills/sync-description/: SKILL.md
